--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						Resume
 					</u>
 				</h1>
-				<iframe src="images/Wilhen_Alberto_Hui_Mei_Resume (upd. 12-31-23).pdf" width="1000px" height="1000px"></iframe>
+				<iframe src="images/Resume Owen Durkin.pdf" width="1000px" height="1000px"></iframe>
 			</div>
 		</section>
 
@@ -95,6 +95,6 @@
 
 	<!-- Scripts -->
 		<script src="assets/js/main.js"></script>
-
+		<script src="src/scroll.js"></script>
 	</body>
 </html>
