Fixed odd bug with resume

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						Resume
 					</u>
 				</h1>
-				<iframe src="images/Resume Owen Durkin.pdf" width="1000px" height="1000px"></iframe>
+				<iframe src="images/Resume Owen Durkin.pdf" width="1000px" height="1000px" style="text-align: center;"></iframe>
 			</div>
 		</section>
 
