--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 					Projects
 				</u>
 			</h1>
+			<div id="projects-grid" class="projects-grid"></div>
 		</section>
 
 		<!-- Resume -->
@@ -80,7 +81,9 @@
 						Resume
 					</u>
 				</h1>
-				<iframe src="images/Resume Owen Durkin.pdf" width="1000px" height="1000px" style="text-align: center;"></iframe>
+				<p align="center">
+					<iframe src="images/Owen Durkin Resume.pdf" style="width: 1000px;height: 1000px;"></iframe>
+				</p>
 			</div>
 		</section>
 
@@ -89,12 +92,13 @@
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/owen-durkin/" class="icon brands fa-linkedin" style="color: rgb(108, 108, 255); font-size: 2em;"><span class="label">Linkedin</span></a></li>
 				<li><a href="https://github.com/ODurcain" class="icon brands fa-github" style="color: white; font-size: 2em;"><span class="label">GitHub</span></a></li>
-				<li><a href="mailto:owen.c.durkin@gmail.com" class="icon fa-envelope" style="color: white; font-size: 2em;"><span class="label">Email</span></a></li>
+				<li><a href="mailto:owen.c.durkin@gmail.com" class="icon fa-envelope" style="color: rgb(204, 200, 41); font-size: 2em;"><span class="label">Email</span></a></li>
 			</ul>
 		</footer>
 
 	<!-- Scripts -->
 		<script src="assets/js/main.js"></script>
 		<script src="src/scroll.js"></script>
+		<script src="src/project.js"></script>
 	</body>
 </html>
